--- a/newsletter-card-component/index.html
+++ b/newsletter-card-component/index.html
@@ -10,9 +10,9 @@
   <body>
     <main>
       <h3>Level Up Your Frontend Skills</h3>
-      <p>Sign up for our free newsletter to receive weekly coding challegnes that will help you imrpove your frontend development skills.</p>
+      <p>Sign up for our free newsletter to receive weekly coding challegnes that will help you improve your frontend development skills.</p>
       <div class="content">
-        <input type="email" id="email" placeholder="Enter your email address"> <button id="submit">Subcribe</button>
+        <input type="email" id="email" placeholder="Enter your email address"> <button id="submit">Subscribe</button>
       </div>
       <div class="checkbox"><input type="checkbox" name="checkbox" id="checkbox"> <span>By checking this box, you agree to recieve our weekly newsletter containing coding challenges,tips, and other related content. You may unsubscribe from the newsletterat any time</span></div>
     </main>
